Signed-off-by: Maohan <Maohan@dexter-work>

--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,13 @@
 
 	<modules>
 		<module>alaska-core</module>
+		<module>alaska-sso</module>
 	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+	</dependencies>
 </project>
