--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.4.0.RELEASE</version>
+	</parent>
+
 	<groupId>io.jee.alaska</groupId>
 	<artifactId>alaska-parent</artifactId>
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
+	
+	<properties>
+		<java.version>1.8</java.version>
+		<hibernate.version>5.2.1.Final</hibernate.version>
+	</properties>
 
 	<build>
 		<plugins>
@@ -15,21 +27,9 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
-	
-	<properties>
-		<spring.version>4.3.2.RELEASE</spring.version>
-	</properties>
-	
+
 	<repositories>
 		<repository>
 			<id>JeeIo-public</id>
