--- a/alaska-sso/pom.xml
+++ b/alaska-sso/pom.xml
@@ -29,6 +29,16 @@
 			<artifactId>spring-boot</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>io.jee.alaska</groupId>
 			<artifactId>alaska-core</artifactId>
 			<version>${project.version}</version>
