Signed-off-by: Maohan <Maohan@dexter-work>

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 	<modules>
 		<module>alaska-core</module>
 		<module>alaska-sso</module>
+		<module>alaska-alibaba</module>
 	</modules>
 	<dependencies>
 		<dependency>
