--- a/alaska-core/pom.xml
+++ b/alaska-core/pom.xml
@@ -46,6 +46,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
