--- a/alaska-alibaba/pom.xml
+++ b/alaska-alibaba/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>alaska-core</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.dom4j</groupId>
+		    <artifactId>dom4j</artifactId>
+		    <version>2.0.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
