--- a/alaska-sso/pom.xml
+++ b/alaska-sso/pom.xml
@@ -51,6 +51,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
