--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.0.RELEASE</version>
+		<version>1.4.2.RELEASE</version>
 	</parent>
 
 	<groupId>io.jee.alaska</groupId>
@@ -33,14 +33,14 @@
 	<repositories>
 		<repository>
 			<id>JeeIo-public</id>
-			<url>https://maven.jee.io/content/groups/public/</url>
+			<url>http://maven.jee.io/repository/maven-public/</url>
 		</repository>
 	</repositories>
 
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
-			<url>https://maven.jee.io/content/repositories/releases/</url>
+			<url>http://maven.jee.io/repository/maven-public/</url>
 		</repository>
 	</distributionManagement>
 
