--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Brussels-RELEASE</version>
+        <version>Brussels-SR3</version>
         <relativePath/>
     </parent>
 	
