--- a/alaska-sso/pom.xml
+++ b/alaska-sso/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>spring-data-redis</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 </project>
