--- a/alaska-firewall/pom.xml
+++ b/alaska-firewall/pom.xml
@@ -10,15 +10,18 @@
   	<dependency>
   		<groupId>org.springframework.data</groupId>
   		<artifactId>spring-data-jpa</artifactId>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.springframework.data</groupId>
   		<artifactId>spring-data-redis</artifactId>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.hibernate.javax.persistence</groupId>
   		<artifactId>hibernate-jpa-2.1-api</artifactId>
   		<version>1.0.0.Final</version>
+  		<scope>provided</scope>
   	</dependency>
   </dependencies>
 </project>
