--- a/alaska-sso/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/alaska-sso/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,5 @@
 {"properties": [{
-  "name": "alaska.sso.root-domains",
-  "type": "java.lang.String",
-  "description": "A description for 'alaska.sso.root-domains'"
+  "name": "alaska.sso.root-domain",
+  "type": "java.lang.String[]",
+  "description": "A description for 'alaska.sso.root-domain'"
 }]}
