--- a/alaska-alibaba/pom.xml
+++ b/alaska-alibaba/pom.xml
@@ -4,15 +4,20 @@
 	<parent>
 		<groupId>io.jee.alaska</groupId>
 		<artifactId>alaska-parent</artifactId>
-		<version>1.0.0</version>
+		<version>1.1.0</version>
 	</parent>
 	<artifactId>alaska-alibaba</artifactId>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.taobao</groupId>
-			<artifactId>taobao-sdk</artifactId>
-			<version>20161124</version>
+		    <groupId>com.aliyun</groupId>
+		    <artifactId>aliyun-java-sdk-sms</artifactId>
+		    <version>3.0.0-rc1</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.alipay</groupId>
+		    <artifactId>alipay-sdk-java</artifactId>
+		    <version>20170818173712</version>
 		</dependency>
 		<dependency>
 			<groupId>io.jee.alaska</groupId>
