--- a/alaska-sso-ticket-service/pom.xml
+++ b/alaska-sso-ticket-service/pom.xml
@@ -30,7 +30,7 @@
                     <!-- 详见：https://github.com/spotify/docker-maven-plugin    Invalid repository name ... only [a-z0-9-_.] are allowed-->
                     <imageName>${project.name}</imageName>
                     <baseImage>registry.cn-shenzhen.aliyuncs.com/xmh/java</baseImage>
-                    <dockerHost>http://192.168.10.40:2376</dockerHost>
+                    <dockerHost>${docker.host}</dockerHost>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.war"]</entryPoint>
                     <resources>
                         <resource>
@@ -43,13 +43,56 @@
                 </configuration>
             </plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/application*.yml</include>
+					<include>**/bootstrap.yml</include>
+					<include>**/logback-spring.xml</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**/application*.yml</exclude>
+					<exclude>**/bootstrap.yml</exclude>
+					<exclude>**/logback-spring.xml</exclude>
+				</excludes>
+			</resource>
+		</resources>
 	</build>
+	
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<eureka.service.url>http://192.168.10.40:8761/eureka/</eureka.service.url>
+				<docker.host>http://192.168.10.40:2376</docker.host>
+			</properties>
+		</profile>
+		<profile>
+			<id>pro</id>
+			<properties>
+				<eureka.service.url>http://192.168.10.50:8761/eureka/</eureka.service.url>
+				<docker.host>http://192.168.10.50:2376</docker.host>
+			</properties>
+		</profile>
+	</profiles>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>io.jee.alaska</groupId>
 			<artifactId>alaska-sso</artifactId>
