--- a/alaska-core/pom.xml
+++ b/alaska-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.jee.alaska</groupId>
 		<artifactId>alaska-parent</artifactId>
-		<version>1.1.0</version>
+		<version>2.0.0</version>
 	</parent>
 	<artifactId>alaska-core</artifactId>
 	
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.5.Final</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
