--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
 	<groupId>io.jee.alaska</groupId>
 	<artifactId>alaska-parent</artifactId>
-	<version>1.1.0</version>
+	<version>2.0.0</version>
 	<packaging>pom</packaging>
 	
 	<parent>
-        <groupId>io.spring.platform</groupId>
-        <artifactId>platform-bom</artifactId>
-        <version>Brussels-SR5</version>
+        <groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.0.M7</version>
         <relativePath/>
     </parent>
     
@@ -19,7 +19,7 @@
 	        <dependency>
 	            <groupId>org.springframework.cloud</groupId>
 	            <artifactId>spring-cloud-dependencies</artifactId>
-	            <version>Dalston.SR2</version>
+	            <version>Finchley.M5</version>
 	            <type>pom</type>
 	            <scope>import</scope>
 	        </dependency>
@@ -48,6 +48,22 @@
 			<id>jeeio-nexus</id>
 			<url>http://maven.jee.io/repository/maven-public/</url>
 		</repository>
+		<repository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -55,8 +71,24 @@
 			<id>jeeio-nexus</id>
 			<url>http://maven.jee.io/repository/maven-public/</url>
 		</pluginRepository>
+		<pluginRepository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
 	</pluginRepositories>
-
+	
 	<distributionManagement>
 		<repository>
 			<id>jeeio-nexus</id>
