--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.jee.alaska</groupId>
 	<artifactId>alaska-parent</artifactId>
-	<version>2.0.0</version>
+	<version>2.1.0</version>
 	<packaging>pom</packaging>
 	
 	<parent>
@@ -104,6 +104,7 @@
 		<module>alaska-data</module>
 		<module>alaska-firewall</module>
 		<module>alaska-sso-ticket-service</module>
+		<module>alaska-boot-autoconfigure</module>
 	</modules>
 	
 	<dependencies>
