Signed-off-by: 谢小旭 <sunx@jee.io>

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 		<module>alaska-firewall</module>
 		<module>alaska-sso-ticket-service</module>
 		<module>alaska-boot-autoconfigure</module>
+		<module>alaska-data-framework</module>
 	</modules>
 	
 	<dependencies>
