--- a/alaska-data-framework/pom.xml
+++ b/alaska-data-framework/pom.xml
@@ -15,6 +15,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.jee.alaska</groupId>
+			<artifactId>alaska-data-jpa-hibernate</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 		</dependency>
