--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
         <groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.M7</version>
+		<version>2.0.1.RELEASE</version>
         <relativePath/>
     </parent>
     
@@ -19,7 +19,7 @@
 	        <dependency>
 	            <groupId>org.springframework.cloud</groupId>
 	            <artifactId>spring-cloud-dependencies</artifactId>
-	            <version>Finchley.M5</version>
+	            <version>Finchley.RELEASE</version>
 	            <type>pom</type>
 	            <scope>import</scope>
 	        </dependency>
@@ -111,6 +111,7 @@
 		<dependency>
 		    <groupId>commons-logging</groupId>
 		    <artifactId>commons-logging</artifactId>
+		    <version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
