--- a/alaska-core/pom.xml
+++ b/alaska-core/pom.xml
@@ -7,7 +7,7 @@
 		<version>2.1.1</version>
 	</parent>
 	<artifactId>alaska-core</artifactId>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -32,6 +32,11 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.0.5.Final</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>4.1.8</version>
 		</dependency>
 	</dependencies>
 
