--- a/alaska-core/pom.xml
+++ b/alaska-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.jee.alaska</groupId>
 		<artifactId>alaska-parent</artifactId>
-		<version>3.0.0</version>
+		<version>3.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>alaska-core</artifactId>
 	
