--- a/alaska-pay/pom.xml
+++ b/alaska-pay/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.jee.alaska</groupId>
 		<artifactId>alaska-parent</artifactId>
-		<version>3.0.0</version>
+		<version>3.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>alaska-pay</artifactId>
 
