--- a/alaska-core/pom.xml
+++ b/alaska-core/pom.xml
@@ -33,6 +33,11 @@
 			<version>6.0.5.Final</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
