--- a/alaska-data/pom.xml
+++ b/alaska-data/pom.xml
@@ -15,6 +15,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
 			<scope>provided</scope>
 		</dependency>
