--- a/alaska-core/pom.xml
+++ b/alaska-core/pom.xml
@@ -23,6 +23,11 @@
 			<artifactId>httpclient</artifactId>
 		</dependency>
 		<dependency>
+	        <groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-redis</artifactId>
+	        <scope>provided</scope>
+    	</dependency>
+		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<scope>provided</scope>
